--- a/Example/LittleOwl/Base.lproj/Main.storyboard
+++ b/Example/LittleOwl/Base.lproj/Main.storyboard
@@ -1,30 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Sbo-DI-GpG">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
+        <scene sceneID="WIs-oK-rO8">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="LittleOwl_Example" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Sbo-DI-GpG" customClass="ViewController" customModule="Owl_Example" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
+                        <viewControllerLayoutGuide type="top" id="gHt-hg-yW8"/>
+                        <viewControllerLayoutGuide type="bottom" id="qjg-Kc-ATZ"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
+                    <view key="view" contentMode="scaleToFill" id="ZDb-4x-j88">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jYW-H0-Sdh">
+                                <rect key="frame" x="66" y="309" width="242" height="49"/>
+                                <color key="backgroundColor" red="1" green="0.30980393290000002" blue="0.30980393290000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="49" id="Tbo-xN-YgK"/>
+                                    <constraint firstAttribute="width" constant="242" id="gTo-Sy-8rR"/>
+                                </constraints>
+                                <state key="normal" title="Using a Pod show me the camera!">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="showTapped:" destination="Sbo-DI-GpG" eventType="touchUpInside" id="Z9S-IN-Wg5"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iSb-oo-27Q">
+                                <rect key="frame" x="166" y="250" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="jYW-H0-Sdh" firstAttribute="centerX" secondItem="ZDb-4x-j88" secondAttribute="centerX" id="FZX-Zb-zzX"/>
+                            <constraint firstItem="jYW-H0-Sdh" firstAttribute="top" secondItem="iSb-oo-27Q" secondAttribute="bottom" constant="38" id="VU3-zu-5sP"/>
+                            <constraint firstItem="iSb-oo-27Q" firstAttribute="centerX" secondItem="ZDb-4x-j88" secondAttribute="centerX" id="cNH-wY-hW8"/>
+                            <constraint firstItem="jYW-H0-Sdh" firstAttribute="centerY" secondItem="ZDb-4x-j88" secondAttribute="centerY" id="kpn-4x-fIe"/>
+                        </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Lk-RT-3hP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-87" y="157"/>
         </scene>
     </scenes>
 </document>
