--- a/LittleOwl/Assets/CounterView.xib
+++ b/LittleOwl/Assets/CounterView.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CounterView" customModule="Owl">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CounterView" customModule="LittleOwl" customModuleProvider="target">
             <connections>
                 <outlet property="elapsedTimeLabel" destination="QZW-85-O2U" id="PBM-vE-9Tr"/>
                 <outlet property="pointView" destination="9sj-cU-co0" id="rP0-0F-Hgx"/>
